# rendermesh

./: .gitmodules  CMakeLists.txt  camera.cpp  camera.h  complex_mesh.cpp  complex_mesh.h  complex_model.cpp  main.cpp  main_window.cpp  main_window.h  mesh_buffer.cpp  mesh_buffer.h  meshes_buffer.cpp  meshes_buffer.h  render.cpp  render.h  shaders.cpp  shaders.h  types.h
src/: CMakeLists.txt  camera.cpp  camera.h  complex_model.cpp  complex_model.h  main.cpp  main_window.cpp  meshes_buffer.cpp  meshes_buffer.h  render.cpp  render.h  shaders.cpp  shaders.h  types.h
src/buffer/: blend.cpp  blend.h  pipeline.cpp  pipeline.h  submit.cpp  submit.h  texture.h  vertex.h
src/core/: filter.cpp  filter.h  render.cpp  render.h
src/mesh/: complex.cpp  complex.h  model.cpp  model.h
src/raster/: shaders.cpp  shaders.h
src/view/: camera.cpp  camera.h
src/window/: main_window.cpp  main_window.h
